# verso

./: .editorconfig  .gitattributes  .gitignore  .oxfmtignore  .oxlintignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.zh-CN.md  SECURITY.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  verso.toml
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-review.yml  prepare-release.yml  release.yml
crates/verso/: Cargo.toml
crates/verso/src/: cargo_manifest.rs  changelog.rs  cli.rs  config.rs  doctor.rs  dry_run.rs  git.rs  init.rs  lib.rs  main.rs  package_json.rs  release.rs  rollback.rs  versioning.rs  workspace.rs
crates/verso/tests/: release_flow.rs
scripts/: copy-binary-to-platform-package.mts  publish-npm-packages.mts  verify-platform-packages.mts  write-binary-archive-readme.mts  write-github-release-notes.mts  write-platform-checksums.mts
