[package]
name = "verso"
version = "1.0.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
description.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[lints]
workspace = true

[[bin]]
name = "verso"
path = "src/main.rs"

[dependencies]
anstyle = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
globset = "0.4"
ignore = "0.4"
inquire = "0.9"
json5 = "1.3"
noyalib = { version = "0.0.11", default-features = false, features = ["std"] }
regex = "1"
semver = "1"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tempfile = "3"
toml = "1.1"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
